opam-version: "1.2"
name: "bs-black-tea"
version: "0.1.0"
maintainer: "Jan Hrdina <jan.hrdka@gmail.com>"
authors: [
  "Jan Hrdina <jan.hrdka@gmail.com>"
]
license: "BSD"
homepage: "https://github.com/jhrdina/bs-black-tea"
doc: "https://jhrdina.github.io/bs-black-tea/"
bug-reports: "https://github.com/jhrdina/bs-black-tea/issues"
dev-repo: "git://github.com/jhrdina/bs-black-tea.git"
tags: [ "reason" "example" ]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder" {build}
  "reason"  {= "3.0.4"}
  "re"
]
available: [ ocaml-version >= "4.02" & ocaml-version < "4.07" ]
